# PyKraken

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.manylinux  README.md  cmake_build.py  dev-requirements.txt  main.py  portfile.cmake  pyproject.toml  requirements.txt  stubgen.py  vcpkg.json
.github/scripts/: download_sdl.ps1  install_sdl_linux.sh  install_sdl_macos.sh
.github/workflows/: build-windows.yml  build.yml  ci-tests.yml  docker.yml  release-pypi.yml
cmake/: pykraken_version.hpp.in
cmake/modules/: FindTMXLITE.cmake
example/: main.py
include/: AnimationController.hpp  Camera.hpp  Capsule.hpp  Circle.hpp  Collision.hpp  Color.hpp  Constants.hpp  Draw.hpp  Ease.hpp  Event.hpp  Font.hpp  Gamepad.hpp  Input.hpp  Key.hpp  KrakenEngine.hpp  Line.hpp  Log.hpp  Mask.hpp  Math.hpp  Mixer.hpp  Mouse.hpp  Orchestrator.hpp  PixelArray.hpp  Polygon.hpp  Rect.hpp  Renderer.hpp  ShaderState.hpp  Shaders.hpp  Sprite.hpp  Surface.hpp  Text.hpp  Texture.hpp  TileMap.hpp  Time.hpp  Transform.hpp  Viewport.hpp  Window.hpp  _flagenum.hpp  _globals.hpp  opaque_types.hpp  (+1 more)
include/gfx/: SDL3_gfxPrimitives.h  SDL3_rotozoom.h
include/misc/: SpaceGrotesk.h  kraken_icon.h  minecraftia.h  titillium.h
include/physics/: Body.hpp  DistanceJoint.hpp  FilterJoint.hpp  MotorJoint.hpp  PrismaticJoint.hpp  RevoluteJoint.hpp  TargetJoint.hpp  WeldJoint.hpp  WheelJoint.hpp  World.hpp
include/physics/bodies/: Body.hpp  CharacterBody.hpp  RigidBody.hpp  StaticBody.hpp
include/physics/joints/: DistanceJoint.hpp  FilterJoint.hpp  Joint.hpp  MotorJoint.hpp  MouseJoint.hpp  PrismaticJoint.hpp  RevoluteJoint.hpp  WeldJoint.hpp  WheelJoint.hpp
include/pugixml/: pugiconfig.hpp  pugixml.hpp
include/ui/: UI.hpp
overlay-ports/gperf/: vcpkg.json
overlay-ports/libxcrypt/: vcpkg.json
scripts/: build-linux-deps.sh  clean_stubs.py  fix_stub_imports.py  install_wheels.sh
src/: _core.cpp  animation_controller.cpp  camera.cpp  capsule.cpp  circle.cpp  collision.cpp  color.cpp  constants.cpp  draw.cpp  ease.cpp  event.cpp  font.cpp  gamepad.cpp  input.cpp  key.cpp  line.cpp  log.cpp  mask.cpp  math.cpp  mixer.cpp  mouse.cpp  orchestrator.cpp  pixel_array.cpp  polygon.cpp  pykraken.cpp  rect.cpp  renderer.cpp  shader_state.cpp  shaders.cpp  sprite.cpp  surface.cpp  text.cpp  texture.cpp  tile_map.cpp  time.cpp  transform.cpp  viewport.cpp  window.cpp
src/gfx/: SDL3_gfxPrimitives.cpp  SDL3_rotozoom.cpp
src/physics/: _bind_physics.cpp  body.cpp  distance_joint.cpp  filter_joint.cpp  joint.cpp  motor_joint.cpp  mouse_joint.cpp  prismatic_joint.cpp  revolute_joint.cpp  weld_joint.cpp  wheel_joint.cpp  world.cpp
src/physics/bodies/: body.cpp  character_body.cpp  rigid_body.cpp  static_body.cpp
src/physics/joints/: distance_joint.cpp  filter_joint.cpp  joint.cpp  motor_joint.cpp  mouse_joint.cpp  prismatic_joint.cpp  revolute_joint.cpp  weld_joint.cpp  wheel_joint.cpp
src/pugixml/: pugixml.cpp
src/pykraken/: __init__.py  __init__.pyi  cli.py  shader_uniform.py  shader_uniform.pyi
src/pykraken/__pyinstaller/: hook-pykraken.py
src/pykraken/_core/: __init__.pyi  collision.pyi  color.pyi  draw.pyi  ease.pyi  event.pyi  input.pyi  math.pyi  mixer.pyi  physics.pyi  renderer.pyi  tilemap.pyi  time.pyi  transform.pyi  viewport.pyi  window.pyi
src/tools/: baker_main.cpp  shader_baker.cpp  shader_baker.hpp
src/ui/: ui.cpp
tests/: conftest.py  test_collision.py  test_color.py  test_ease.py  test_event.py  test_imports.py  test_math.py  test_orchestrator.py  test_rect.py  test_renderer.py  test_shader_uniform.py  test_shapes.py  test_timer.py  test_transform.py  test_tween.py  test_vec2.py
triplets/: arm64-osx-release.cmake  x64-linux-release.cmake
