[build-system]
requires = ["scikit-build-core", "pybind11", "cibuildwheel"]
build-backend = "scikit_build_core.build"

[project]
name = "kraken-engine"
version = "1.2.2"
dependencies = [
  "pydantic==2.12.3",
]
authors = [
  { name = "Derrick Martinez" },
]
description = "Python bindings for Kraken Engine"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia :: Graphics",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://docs.krakenengine.org/"
"Issues" = "https://github.com/Kraken-Engine/PyKraken/issues"
"Documentation" = "https://docs.krakenengine.org/docs/getting-started/introduction"
"Release Notes" = "https://github.com/Kraken-Engine/PyKraken/releases"
"Source" = "https://github.com/Kraken-Engine/PyKraken"

[tool.scikit-build]
wheel.packages = ["src/pykraken"]
